force-app/main/default/objects/AgentImprovementConfig__c/AgentImprovementConfig__c.object-meta.xml
<CustomObject>
    <description>Stores framework thresholds per agent - one record per agent.</description>
    <label>Agent Improvement Config</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Improvement Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>