force-app/main/default/objects/AgentImprovementConfig__c/fields/ab_mode_enabled__c.field-meta.xml
<CustomField>
    <fullName>ab_mode_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable A/B testing mode for this agent.</description>
    <label>A/B Mode Enabled</label>
    <type>Checkbox</type>
</CustomField>