force-app/main/default/objects/AgentImprovementConfig__c/fields/ab_treatment_pct__c.field-meta.xml
<CustomField>
    <fullName>ab_treatment_pct__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Percentage of sessions assigned to the treatment group.</description>
    <label>A/B Treatment Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>