force-app/main/default/objects/AgentImprovementConfig__c/fields/decay_grace_period_days__c.field-meta.xml
<CustomField>
    <fullName>decay_grace_period_days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days before confidence decay starts.</description>
    <label>Decay Grace Period Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>