force-app/main/default/objects/AgentImprovementConfig__c/fields/decay_rate_per_month__c.field-meta.xml
<CustomField>
    <fullName>decay_rate_per_month__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>Monthly confidence decay rate applied to lessons.</description>
    <label>Decay Rate Per Month</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>