force-app/main/default/objects/AgentImprovementConfig__c/fields/demotion_confidence__c.field-meta.xml
<CustomField>
    <fullName>demotion_confidence__c</fullName>
    <defaultValue>0.10</defaultValue>
    <description>Confidence threshold below which a lesson is archived.</description>
    <label>Demotion Confidence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>