force-app/main/default/objects/AgentImprovementConfig__c/fields/hide_confidence__c.field-meta.xml
<CustomField>
    <fullName>hide_confidence__c</fullName>
    <defaultValue>0.30</defaultValue>
    <description>Stop showing lesson in before_reasoning below this confidence.</description>
    <label>Hide Confidence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>