force-app/main/default/objects/AgentImprovementConfig__c/fields/lesson_selection_min_confidence__c.field-meta.xml
<CustomField>
    <fullName>lesson_selection_min_confidence__c</fullName>
    <defaultValue>0.80</defaultValue>
    <description>Minimum confidence score for a lesson to enter the selection pool</description>
    <label>Lesson Selection Min Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>