force-app/main/default/objects/AgentImprovementConfig__c/fields/lesson_selection_pool_size__c.field-meta.xml
<CustomField>
    <fullName>lesson_selection_pool_size__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Maximum number of lessons sent to the relevance selection Prompt Template</description>
    <label>Lesson Selection Pool Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>