force-app/main/default/objects/AgentImprovementConfig__c/fields/loop_detection_threshold__c.field-meta.xml
<CustomField>
    <fullName>loop_detection_threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum retries before applying a penalty.</description>
    <label>Loop Detection Threshold</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>