force-app/main/default/objects/AgentImprovementConfig__c/fields/max_lessons_per_topic__c.field-meta.xml
<CustomField>
    <fullName>max_lessons_per_topic__c</fullName>
    <defaultValue>5</defaultValue>
    <description>SOQL LIMIT per subagent for lesson retrieval.</description>
    <label>Max Lessons Per Topic</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>