force-app/main/default/objects/AgentImprovementConfig__c/fields/points_floor__c.field-meta.xml
<CustomField>
    <fullName>points_floor__c</fullName>
    <defaultValue>-50</defaultValue>
    <description>Minimum score before restricting lesson usage.</description>
    <label>Points Floor</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>