force-app/main/default/objects/AgentImprovementConfig__c/fields/promotion_confidence__c.field-meta.xml
<CustomField>
    <fullName>promotion_confidence__c</fullName>
    <defaultValue>0.80</defaultValue>
    <description>Minimum confidence score required to promote a lesson.</description>
    <label>Promotion Confidence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>