force-app/main/default/objects/AgentImprovementConfig__c/fields/promotion_references__c.field-meta.xml
<CustomField>
    <fullName>promotion_references__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Minimum number of sessions before a lesson can be promoted.</description>
    <label>Promotion References</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>